--- a/list.html
+++ b/list.html
@@ -21,7 +21,7 @@
                     <a href="shopcar.html">
                         <span class="iconfont">&#xe610;</span>&nbsp;
                         <span class="car">购物车</span>
-                        &nbsp;(<span class="count" id="checkoutNum">0</span>)
+                        &nbsp;(<span class="count">0</span>)
                     </a>
                     <div class="cart_list">
                         <p class="list_null">购物车还没有商品，快去挑选商品吧！</p>
@@ -42,7 +42,7 @@
                 <a href="" class="logo left">
                     <img src="images/logo_img.png" alt="">
                 </a>
-                <a href="" class="shop left" href="list.html">
+                <a href="" class="shop left">
                     <img src="images/logo_shop.png" alt="">
                 </a>
                 <div class="menu left">
@@ -98,49 +98,6 @@
                             <a href="" class="content_a" target="_blank">武林外传</a>
                         </span>
                     </form>
-                </div>
-            </div>
-        </div>
-        <!-- banner -->
-        <div class="header_banner">
-            <div class="hd">
-                <a href="" class="on"></a>
-                <a href="" class=""></a>
-            </div>
-            <div class="bd">
-                <div class="tempWrap">
-                    <ul class="cf slide">
-                        <li class="pic1">
-                            <a href="" class="tj_link" title="武林手机支架"target="_blank"></a>
-                        </li>
-                        <li class="pic2">
-                            <a href="" class="tj_link" title="csgo周边上新" target="_blank"></a>
-                        </li>
-                        <li class="pic1">
-                            <a href="" class="tj_link" title="武林手机支架"target="_blank"></a>
-                        </li>
-                    </ul>
-                </div>
-                <a class="prev" href=""><span></span></a>
-                <a class="next" href=""><span></span></a>
-            </div>
-            <div class="goodslist">
-                <ul id="goodslist-ul">
-                    <div id="goods-div">
-
-                        
-
-                    </div>
-                </ul>
-            </div>
-        </div>
-        <!-- ad -->
-        <div class="buying">
-            <div class="wrap">
-                <div class="ad_list">
-                    
-
-
                 </div>
             </div>
         </div>
