--- a/shopcar.html
+++ b/shopcar.html
@@ -31,7 +31,7 @@
                     <dt class="left"><a href="">我的订单</a></dt>
                     <dd class="left"><a href="">我的关注</a></dd>
                 </dl>
-                <dl class="user right ">
+                <dl class="user right " id="yonghu">
                     <dt class="left"><a href="login.html" target="_blank">登录</a></dt>
                     <dd class="left"><a href="register.html" target="_blank">注册</a></dd>
                 </dl>
